--- a/milestone-module/milestone03/module15-tailwind-css/index2.html
+++ b/milestone-module/milestone03/module15-tailwind-css/index2.html
@@ -15,6 +15,8 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        penguin: '#FFFBF0',
+                        price: '#fabe4c',
                     }
                 }
             }
@@ -23,16 +25,16 @@
 </head>
 
 <body>
-    <header>
-        <section class="container mx-auto">
+    <header class="bg-penguin pb-32 pt-10">
+        <section class="container mx-auto sm:flex items-center justify-around">
             <div class="space-y-4">
-                <h1 class="text-5xl uppercase font-bold">
+                <h1 class="text-2xl sm:text-5xl uppercase font-bold">
                     <span class="text-yellow-400">Be The Penguin</span>
                     <br>
                     <span>Of Winter</span>
                 </h1>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <button class="uppercase bg-[#A4BC46] py-4 px-7 font-semibold text-white rounded-xl">
+                <button class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
                     <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -42,13 +44,166 @@
                     Buy Now
                 </button>
             </div>
-            <div>
-                <img src="./images/model.png" alt="model">
+            <div class="pt-8 sm:pt-0">
+                <img class="w-1/2 sm:w-full" src="./images/model.png" alt="model">
             </div>
         </section>
     </header>
-    <main>
+    <main class="container mx-auto">
+        <!-- Woman Jackets Section -->
+        <section class="mb-16">
+            <h1 class="text-5xl font-bold my-8">Woman Jackets</h1>
+            <div class="grid grid-cols-3 gap-7">
+                <!-- Jacket-1  -->
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-slate-100 rounded-xl">
+                        <img src="./images/jacket-1.png" alt="jacket-1">
+                    </div>
+                    <div class="space-y-3">
+                        <h2 class="text-3xl font-semibold">Yellow Coat Jackets</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, voluptatibus!</p>
+                        <div class="flex justify-between">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button
+                                class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                                <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                                    </path>
+                                </svg>
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Jacket-2  -->
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-slate-100 rounded-xl">
+                        <img src="./images/jacket-2.png" alt="jacket-2">
+                    </div>
+                    <div class="space-y-3">
+                        <h2 class="text-3xl font-semibold">Ladies Jackets</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, voluptatibus!</p>
+                        <div class="flex justify-between">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button
+                                class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                                <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                                    </path>
+                                </svg>
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Jacket-3 -->
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-slate-100 rounded-xl">
+                        <img src="./images/jacket-3.png" alt="jacket-3">
+                    </div>
+                    <div class="space-y-3">
+                        <h2 class="text-3xl font-semibold">Woman Leather Jackets</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, voluptatibus!</p>
+                        <div class="flex justify-between">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button
+                                class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                                <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                                    </path>
+                                </svg>
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Man Jackets Section -->
+        <section class="mb-8">
+            <h1 class="text-5xl font-bold my-8">Man Jackets</h1>
+            <div class="grid grid-cols-3 gap-7">
+                <!-- Jacket-1  -->
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-slate-100 rounded-xl">
+                        <img src="./images/jacket-4.png" alt="jacket-4">
+                    </div>
+                    <div class="space-y-3">
+                        <h2 class="text-3xl font-semibold">Snowboard Jacket Mens</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, voluptatibus!</p>
+                        <div class="flex justify-between">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button
+                                class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                                <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                                    </path>
+                                </svg>
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Jacket-2  -->
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-slate-100 rounded-xl">
+                        <img src="./images/jacket-5.png" alt="jacket-5">
+                    </div>
+                    <div class="space-y-3">
+                        <h2 class="text-3xl font-semibold">Man Leather Jackets</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, voluptatibus!</p>
+                        <div class="flex justify-between">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button
+                                class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                                <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                                    </path>
+                                </svg>
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Jacket-3 -->
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-slate-100 rounded-xl">
+                        <img src="./images/jacket-6.png" alt="jacket-6">
+                    </div>
+                    <div class="space-y-3">
+                        <h2 class="text-3xl font-semibold">Man Casual Jackets</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, voluptatibus!</p>
+                        <div class="flex justify-between">
+                            <h2 class="text-4xl font-semibold text-price">$234</h2>
+                            <button
+                                class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                                <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                                    </path>
+                                </svg>
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
